Fix a Tag into contact section TABLET version

--- a/src/sass/layouts/_contact.scss
+++ b/src/sass/layouts/_contact.scss
@@ -113,6 +113,9 @@
         &__btns{
             grid-area: 2/1;
             margin: auto;
+            a{
+                text-decoration: none;
+            }
         }
     }
 }
